tested and cleared all notebooks

--- a/examples/user_guide/2_Proximity.ipynb
+++ b/examples/user_guide/2_Proximity.ipynb
@@ -32,10 +32,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-23T01:06:02.949671Z",
-     "iopub.status.busy": "2026-01-23T01:06:02.949567Z",
-     "iopub.status.idle": "2026-01-23T01:06:03.839080Z",
-     "shell.execute_reply": "2026-01-23T01:06:03.838460Z"
+     "iopub.execute_input": "2026-01-23T19:11:01.717554Z",
+     "iopub.status.busy": "2026-01-23T19:11:01.717451Z",
+     "iopub.status.idle": "2026-01-23T19:11:02.650035Z",
+     "shell.execute_reply": "2026-01-23T19:11:02.649339Z"
     }
    },
    "outputs": [],
@@ -86,10 +86,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-23T01:06:03.841160Z",
-     "iopub.status.busy": "2026-01-23T01:06:03.840870Z",
-     "iopub.status.idle": "2026-01-23T01:06:05.337802Z",
-     "shell.execute_reply": "2026-01-23T01:06:05.337023Z"
+     "iopub.execute_input": "2026-01-23T19:11:02.651679Z",
+     "iopub.status.busy": "2026-01-23T19:11:02.651397Z",
+     "iopub.status.idle": "2026-01-23T19:11:04.124204Z",
+     "shell.execute_reply": "2026-01-23T19:11:04.123659Z"
     }
    },
    "outputs": [],
@@ -138,10 +138,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-23T01:06:05.358722Z",
-     "iopub.status.busy": "2026-01-23T01:06:05.358564Z",
-     "iopub.status.idle": "2026-01-23T01:06:06.807312Z",
-     "shell.execute_reply": "2026-01-23T01:06:06.806730Z"
+     "iopub.execute_input": "2026-01-23T19:11:04.145209Z",
+     "iopub.status.busy": "2026-01-23T19:11:04.145021Z",
+     "iopub.status.idle": "2026-01-23T19:11:05.567747Z",
+     "shell.execute_reply": "2026-01-23T19:11:05.567145Z"
     }
    },
    "outputs": [],
@@ -173,10 +173,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-23T01:06:06.810035Z",
-     "iopub.status.busy": "2026-01-23T01:06:06.809906Z",
-     "iopub.status.idle": "2026-01-23T01:06:07.677955Z",
-     "shell.execute_reply": "2026-01-23T01:06:07.676838Z"
+     "iopub.execute_input": "2026-01-23T19:11:05.570429Z",
+     "iopub.status.busy": "2026-01-23T19:11:05.570301Z",
+     "iopub.status.idle": "2026-01-23T19:11:06.421848Z",
+     "shell.execute_reply": "2026-01-23T19:11:06.421066Z"
     }
    },
    "outputs": [],
@@ -204,10 +204,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-23T01:06:07.679921Z",
-     "iopub.status.busy": "2026-01-23T01:06:07.679810Z",
-     "iopub.status.idle": "2026-01-23T01:06:08.312249Z",
-     "shell.execute_reply": "2026-01-23T01:06:08.311466Z"
+     "iopub.execute_input": "2026-01-23T19:11:06.423728Z",
+     "iopub.status.busy": "2026-01-23T19:11:06.423617Z",
+     "iopub.status.idle": "2026-01-23T19:11:07.032049Z",
+     "shell.execute_reply": "2026-01-23T19:11:07.031538Z"
     }
    },
    "outputs": [],
@@ -232,10 +232,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-23T01:06:08.314141Z",
-     "iopub.status.busy": "2026-01-23T01:06:08.314011Z",
-     "iopub.status.idle": "2026-01-23T01:06:09.111444Z",
-     "shell.execute_reply": "2026-01-23T01:06:09.110727Z"
+     "iopub.execute_input": "2026-01-23T19:11:07.033322Z",
+     "iopub.status.busy": "2026-01-23T19:11:07.033225Z",
+     "iopub.status.idle": "2026-01-23T19:11:07.812586Z",
+     "shell.execute_reply": "2026-01-23T19:11:07.812068Z"
     }
    },
    "outputs": [],
@@ -264,10 +264,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-23T01:06:09.113437Z",
-     "iopub.status.busy": "2026-01-23T01:06:09.113324Z",
-     "iopub.status.idle": "2026-01-23T01:06:09.160715Z",
-     "shell.execute_reply": "2026-01-23T01:06:09.160008Z"
+     "iopub.execute_input": "2026-01-23T19:11:07.814235Z",
+     "iopub.status.busy": "2026-01-23T19:11:07.814096Z",
+     "iopub.status.idle": "2026-01-23T19:11:07.860946Z",
+     "shell.execute_reply": "2026-01-23T19:11:07.860370Z"
     }
    },
    "outputs": [],
@@ -301,10 +301,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-23T01:06:09.162557Z",
-     "iopub.status.busy": "2026-01-23T01:06:09.162446Z",
-     "iopub.status.idle": "2026-01-23T01:06:09.670196Z",
-     "shell.execute_reply": "2026-01-23T01:06:09.669284Z"
+     "iopub.execute_input": "2026-01-23T19:11:07.862217Z",
+     "iopub.status.busy": "2026-01-23T19:11:07.862117Z",
+     "iopub.status.idle": "2026-01-23T19:11:08.365977Z",
+     "shell.execute_reply": "2026-01-23T19:11:08.365404Z"
     }
    },
    "outputs": [],
@@ -349,10 +349,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-23T01:06:09.671841Z",
-     "iopub.status.busy": "2026-01-23T01:06:09.671738Z",
-     "iopub.status.idle": "2026-01-23T01:06:10.210273Z",
-     "shell.execute_reply": "2026-01-23T01:06:10.209291Z"
+     "iopub.execute_input": "2026-01-23T19:11:08.367401Z",
+     "iopub.status.busy": "2026-01-23T19:11:08.367288Z",
+     "iopub.status.idle": "2026-01-23T19:11:08.907528Z",
+     "shell.execute_reply": "2026-01-23T19:11:08.906920Z"
     }
    },
    "outputs": [],
@@ -378,6 +378,11 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
