--- a/examples/user_guide/3_Zonal.ipynb
+++ b/examples/user_guide/3_Zonal.ipynb
@@ -30,10 +30,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-23T01:06:12.275987Z",
-     "iopub.status.busy": "2026-01-23T01:06:12.275887Z",
-     "iopub.status.idle": "2026-01-23T01:06:13.039323Z",
-     "shell.execute_reply": "2026-01-23T01:06:13.038551Z"
+     "iopub.execute_input": "2026-01-23T19:11:16.666839Z",
+     "iopub.status.busy": "2026-01-23T19:11:16.666728Z",
+     "iopub.status.idle": "2026-01-23T19:11:17.440108Z",
+     "shell.execute_reply": "2026-01-23T19:11:17.439328Z"
     }
    },
    "outputs": [],
@@ -64,10 +64,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-23T01:06:13.040818Z",
-     "iopub.status.busy": "2026-01-23T01:06:13.040524Z",
-     "iopub.status.idle": "2026-01-23T01:06:14.906413Z",
-     "shell.execute_reply": "2026-01-23T01:06:14.905515Z"
+     "iopub.execute_input": "2026-01-23T19:11:17.442135Z",
+     "iopub.status.busy": "2026-01-23T19:11:17.441877Z",
+     "iopub.status.idle": "2026-01-23T19:11:18.403316Z",
+     "shell.execute_reply": "2026-01-23T19:11:18.402533Z"
     }
    },
    "outputs": [],
@@ -98,10 +98,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-23T01:06:14.923850Z",
-     "iopub.status.busy": "2026-01-23T01:06:14.923698Z",
-     "iopub.status.idle": "2026-01-23T01:06:15.000511Z",
-     "shell.execute_reply": "2026-01-23T01:06:14.999805Z"
+     "iopub.execute_input": "2026-01-23T19:11:18.421283Z",
+     "iopub.status.busy": "2026-01-23T19:11:18.421142Z",
+     "iopub.status.idle": "2026-01-23T19:11:18.496844Z",
+     "shell.execute_reply": "2026-01-23T19:11:18.496345Z"
     }
    },
    "outputs": [],
@@ -141,10 +141,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-23T01:06:15.002085Z",
-     "iopub.status.busy": "2026-01-23T01:06:15.001979Z",
-     "iopub.status.idle": "2026-01-23T01:06:16.840772Z",
-     "shell.execute_reply": "2026-01-23T01:06:16.839951Z"
+     "iopub.execute_input": "2026-01-23T19:11:18.498381Z",
+     "iopub.status.busy": "2026-01-23T19:11:18.498263Z",
+     "iopub.status.idle": "2026-01-23T19:11:20.291790Z",
+     "shell.execute_reply": "2026-01-23T19:11:20.291200Z"
     }
    },
    "outputs": [],
@@ -183,10 +183,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-23T01:06:16.844561Z",
-     "iopub.status.busy": "2026-01-23T01:06:16.844434Z",
-     "iopub.status.idle": "2026-01-23T01:06:17.020670Z",
-     "shell.execute_reply": "2026-01-23T01:06:17.020147Z"
+     "iopub.execute_input": "2026-01-23T19:11:20.295281Z",
+     "iopub.status.busy": "2026-01-23T19:11:20.295165Z",
+     "iopub.status.idle": "2026-01-23T19:11:20.468030Z",
+     "shell.execute_reply": "2026-01-23T19:11:20.467305Z"
     }
    },
    "outputs": [],
@@ -213,10 +213,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-23T01:06:17.022197Z",
-     "iopub.status.busy": "2026-01-23T01:06:17.022079Z",
-     "iopub.status.idle": "2026-01-23T01:06:17.062268Z",
-     "shell.execute_reply": "2026-01-23T01:06:17.061587Z"
+     "iopub.execute_input": "2026-01-23T19:11:20.469879Z",
+     "iopub.status.busy": "2026-01-23T19:11:20.469694Z",
+     "iopub.status.idle": "2026-01-23T19:11:20.509946Z",
+     "shell.execute_reply": "2026-01-23T19:11:20.509288Z"
     }
    },
    "outputs": [],
@@ -251,10 +251,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-23T01:06:17.063510Z",
-     "iopub.status.busy": "2026-01-23T01:06:17.063402Z",
-     "iopub.status.idle": "2026-01-23T01:06:17.160546Z",
-     "shell.execute_reply": "2026-01-23T01:06:17.159664Z"
+     "iopub.execute_input": "2026-01-23T19:11:20.511434Z",
+     "iopub.status.busy": "2026-01-23T19:11:20.511332Z",
+     "iopub.status.idle": "2026-01-23T19:11:20.615404Z",
+     "shell.execute_reply": "2026-01-23T19:11:20.614778Z"
     }
    },
    "outputs": [],
@@ -270,7 +270,7 @@
     "# visualize the results: green shades for different tree species\n",
     "tree_colors = ['white', '#228B22', '#006400', '#32CD32']  # No trees, Oak (forest green), Pine (dark green), Maple (lime green)\n",
     "trees_shaded = shade(tree_species_agg, cmap=tree_colors)\n",
-    "stack(trees_shaded, terrain_shaded)"
+    "stack(trees_shaded, zones_shaded, terrain_shaded)"
    ]
   },
   {
@@ -285,10 +285,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-23T01:06:17.162297Z",
-     "iopub.status.busy": "2026-01-23T01:06:17.162194Z",
-     "iopub.status.idle": "2026-01-23T01:06:17.188779Z",
-     "shell.execute_reply": "2026-01-23T01:06:17.188148Z"
+     "iopub.execute_input": "2026-01-23T19:11:20.617267Z",
+     "iopub.status.busy": "2026-01-23T19:11:20.617161Z",
+     "iopub.status.idle": "2026-01-23T19:11:20.646138Z",
+     "shell.execute_reply": "2026-01-23T19:11:20.645654Z"
     }
    },
    "outputs": [],
@@ -300,6 +300,13 @@
     "result.columns = ['Trail Segment', 'Oak', 'Pine', 'Maple']\n",
     "result"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
