--- a/examples/user_guide/4_Focal.ipynb
+++ b/examples/user_guide/4_Focal.ipynb
@@ -21,10 +21,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-23T01:06:19.920301Z",
-     "iopub.status.busy": "2026-01-23T01:06:19.920182Z",
-     "iopub.status.idle": "2026-01-23T01:06:20.806928Z",
-     "shell.execute_reply": "2026-01-23T01:06:20.806205Z"
+     "iopub.execute_input": "2026-01-23T19:11:23.349087Z",
+     "iopub.status.busy": "2026-01-23T19:11:23.348976Z",
+     "iopub.status.idle": "2026-01-23T19:11:24.267494Z",
+     "shell.execute_reply": "2026-01-23T19:11:24.266796Z"
     }
    },
    "outputs": [],
@@ -58,10 +58,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-23T01:06:20.808406Z",
-     "iopub.status.busy": "2026-01-23T01:06:20.808134Z",
-     "iopub.status.idle": "2026-01-23T01:06:22.522812Z",
-     "shell.execute_reply": "2026-01-23T01:06:22.522173Z"
+     "iopub.execute_input": "2026-01-23T19:11:24.268991Z",
+     "iopub.status.busy": "2026-01-23T19:11:24.268731Z",
+     "iopub.status.idle": "2026-01-23T19:11:25.935258Z",
+     "shell.execute_reply": "2026-01-23T19:11:25.934791Z"
     }
    },
    "outputs": [],
@@ -96,10 +96,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-23T01:06:22.540444Z",
-     "iopub.status.busy": "2026-01-23T01:06:22.540273Z",
-     "iopub.status.idle": "2026-01-23T01:06:23.615308Z",
-     "shell.execute_reply": "2026-01-23T01:06:23.614387Z"
+     "iopub.execute_input": "2026-01-23T19:11:25.953870Z",
+     "iopub.status.busy": "2026-01-23T19:11:25.953712Z",
+     "iopub.status.idle": "2026-01-23T19:11:27.004284Z",
+     "shell.execute_reply": "2026-01-23T19:11:27.003272Z"
     }
    },
    "outputs": [],
@@ -147,10 +147,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-23T01:06:23.618938Z",
-     "iopub.status.busy": "2026-01-23T01:06:23.618828Z",
-     "iopub.status.idle": "2026-01-23T01:06:25.344618Z",
-     "shell.execute_reply": "2026-01-23T01:06:25.343941Z"
+     "iopub.execute_input": "2026-01-23T19:11:27.006889Z",
+     "iopub.status.busy": "2026-01-23T19:11:27.006769Z",
+     "iopub.status.idle": "2026-01-23T19:11:28.733873Z",
+     "shell.execute_reply": "2026-01-23T19:11:28.732500Z"
     }
    },
    "outputs": [],
@@ -207,10 +207,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-23T01:06:25.350392Z",
-     "iopub.status.busy": "2026-01-23T01:06:25.350269Z",
-     "iopub.status.idle": "2026-01-23T01:06:25.596415Z",
-     "shell.execute_reply": "2026-01-23T01:06:25.595660Z"
+     "iopub.execute_input": "2026-01-23T19:11:28.738911Z",
+     "iopub.status.busy": "2026-01-23T19:11:28.738786Z",
+     "iopub.status.idle": "2026-01-23T19:11:28.984077Z",
+     "shell.execute_reply": "2026-01-23T19:11:28.983463Z"
     }
    },
    "outputs": [],
@@ -262,10 +262,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-23T01:06:25.601508Z",
-     "iopub.status.busy": "2026-01-23T01:06:25.601379Z",
-     "iopub.status.idle": "2026-01-23T01:06:25.604403Z",
-     "shell.execute_reply": "2026-01-23T01:06:25.603848Z"
+     "iopub.execute_input": "2026-01-23T19:11:28.988225Z",
+     "iopub.status.busy": "2026-01-23T19:11:28.988126Z",
+     "iopub.status.idle": "2026-01-23T19:11:28.991507Z",
+     "shell.execute_reply": "2026-01-23T19:11:28.990905Z"
     }
    },
    "outputs": [],
@@ -279,10 +279,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-23T01:06:25.605531Z",
-     "iopub.status.busy": "2026-01-23T01:06:25.605438Z",
-     "iopub.status.idle": "2026-01-23T01:06:25.851016Z",
-     "shell.execute_reply": "2026-01-23T01:06:25.850421Z"
+     "iopub.execute_input": "2026-01-23T19:11:28.992468Z",
+     "iopub.status.busy": "2026-01-23T19:11:28.992362Z",
+     "iopub.status.idle": "2026-01-23T19:11:29.219168Z",
+     "shell.execute_reply": "2026-01-23T19:11:29.218635Z"
     }
    },
    "outputs": [],
@@ -305,10 +305,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-23T01:06:25.852315Z",
-     "iopub.status.busy": "2026-01-23T01:06:25.852207Z",
-     "iopub.status.idle": "2026-01-23T01:06:25.925555Z",
-     "shell.execute_reply": "2026-01-23T01:06:25.924984Z"
+     "iopub.execute_input": "2026-01-23T19:11:29.220364Z",
+     "iopub.status.busy": "2026-01-23T19:11:29.220258Z",
+     "iopub.status.idle": "2026-01-23T19:11:29.293321Z",
+     "shell.execute_reply": "2026-01-23T19:11:29.292703Z"
     }
    },
    "outputs": [],
@@ -318,9 +318,21 @@
     "\n",
     "stack(hotspots_shaded, terrain_shaded)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
