--- a/examples/user_guide/5_Classification.ipynb
+++ b/examples/user_guide/5_Classification.ipynb
@@ -30,10 +30,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-23T01:06:28.580117Z",
-     "iopub.status.busy": "2026-01-23T01:06:28.580009Z",
-     "iopub.status.idle": "2026-01-23T01:06:29.461275Z",
-     "shell.execute_reply": "2026-01-23T01:06:29.460604Z"
+     "iopub.execute_input": "2026-01-23T19:11:36.363326Z",
+     "iopub.status.busy": "2026-01-23T19:11:36.363219Z",
+     "iopub.status.idle": "2026-01-23T19:11:37.293470Z",
+     "shell.execute_reply": "2026-01-23T19:11:37.292946Z"
     }
    },
    "outputs": [],
@@ -65,10 +65,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-23T01:06:29.462756Z",
-     "iopub.status.busy": "2026-01-23T01:06:29.462477Z",
-     "iopub.status.idle": "2026-01-23T01:06:32.321536Z",
-     "shell.execute_reply": "2026-01-23T01:06:32.320777Z"
+     "iopub.execute_input": "2026-01-23T19:11:37.295158Z",
+     "iopub.status.busy": "2026-01-23T19:11:37.294889Z",
+     "iopub.status.idle": "2026-01-23T19:11:40.115752Z",
+     "shell.execute_reply": "2026-01-23T19:11:40.114957Z"
     }
    },
    "outputs": [],
@@ -112,10 +112,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-23T01:06:32.349654Z",
-     "iopub.status.busy": "2026-01-23T01:06:32.349503Z",
-     "iopub.status.idle": "2026-01-23T01:06:32.594036Z",
-     "shell.execute_reply": "2026-01-23T01:06:32.593296Z"
+     "iopub.execute_input": "2026-01-23T19:11:40.142621Z",
+     "iopub.status.busy": "2026-01-23T19:11:40.142472Z",
+     "iopub.status.idle": "2026-01-23T19:11:40.382126Z",
+     "shell.execute_reply": "2026-01-23T19:11:40.381610Z"
     }
    },
    "outputs": [],
@@ -145,10 +145,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-23T01:06:32.595699Z",
-     "iopub.status.busy": "2026-01-23T01:06:32.595573Z",
-     "iopub.status.idle": "2026-01-23T01:06:32.678911Z",
-     "shell.execute_reply": "2026-01-23T01:06:32.678314Z"
+     "iopub.execute_input": "2026-01-23T19:11:40.384520Z",
+     "iopub.status.busy": "2026-01-23T19:11:40.384397Z",
+     "iopub.status.idle": "2026-01-23T19:11:40.467270Z",
+     "shell.execute_reply": "2026-01-23T19:11:40.466380Z"
     }
    },
    "outputs": [],
@@ -176,10 +176,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-23T01:06:32.680437Z",
-     "iopub.status.busy": "2026-01-23T01:06:32.680310Z",
-     "iopub.status.idle": "2026-01-23T01:06:32.985921Z",
-     "shell.execute_reply": "2026-01-23T01:06:32.985237Z"
+     "iopub.execute_input": "2026-01-23T19:11:40.468564Z",
+     "iopub.status.busy": "2026-01-23T19:11:40.468455Z",
+     "iopub.status.idle": "2026-01-23T19:11:40.768806Z",
+     "shell.execute_reply": "2026-01-23T19:11:40.768077Z"
     }
    },
    "outputs": [],
@@ -211,10 +211,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-23T01:06:32.987681Z",
-     "iopub.status.busy": "2026-01-23T01:06:32.987564Z",
-     "iopub.status.idle": "2026-01-23T01:06:33.864318Z",
-     "shell.execute_reply": "2026-01-23T01:06:33.863780Z"
+     "iopub.execute_input": "2026-01-23T19:11:40.770186Z",
+     "iopub.status.busy": "2026-01-23T19:11:40.770083Z",
+     "iopub.status.idle": "2026-01-23T19:11:41.636179Z",
+     "shell.execute_reply": "2026-01-23T19:11:41.635478Z"
     }
    },
    "outputs": [],
@@ -241,9 +241,21 @@
     "- Making Maps with Noise Functions: https://www.redblobgames.com/maps/terrain-from-noise/\n",
     "- How Aspect Works: http://desktop.arcgis.com/en/arcmap/10.3/tools/spatial-analyst-toolbox/how-aspect-works.htm#ESRI_SECTION1_4198691F8852475A9F4BC71246579FAA"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
