--- a/examples/user_guide/6_Remote_Sensing.ipynb
+++ b/examples/user_guide/6_Remote_Sensing.ipynb
@@ -43,10 +43,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-23T01:06:36.383558Z",
-     "iopub.status.busy": "2026-01-23T01:06:36.383472Z",
-     "iopub.status.idle": "2026-01-23T01:06:37.224505Z",
-     "shell.execute_reply": "2026-01-23T01:06:37.223863Z"
+     "iopub.execute_input": "2026-01-23T19:11:44.302358Z",
+     "iopub.status.busy": "2026-01-23T19:11:44.302264Z",
+     "iopub.status.idle": "2026-01-23T19:11:45.152268Z",
+     "shell.execute_reply": "2026-01-23T19:11:45.151716Z"
     }
    },
    "outputs": [],
@@ -79,10 +79,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-23T01:06:37.226146Z",
-     "iopub.status.busy": "2026-01-23T01:06:37.225870Z",
-     "iopub.status.idle": "2026-01-23T01:06:42.915066Z",
-     "shell.execute_reply": "2026-01-23T01:06:42.914421Z"
+     "iopub.execute_input": "2026-01-23T19:11:45.153757Z",
+     "iopub.status.busy": "2026-01-23T19:11:45.153504Z",
+     "iopub.status.idle": "2026-01-23T19:11:49.932197Z",
+     "shell.execute_reply": "2026-01-23T19:11:49.931536Z"
     }
    },
    "outputs": [],
@@ -128,10 +128,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-23T01:06:42.935130Z",
-     "iopub.status.busy": "2026-01-23T01:06:42.934915Z",
-     "iopub.status.idle": "2026-01-23T01:06:44.738253Z",
-     "shell.execute_reply": "2026-01-23T01:06:44.737480Z"
+     "iopub.execute_input": "2026-01-23T19:11:49.953762Z",
+     "iopub.status.busy": "2026-01-23T19:11:49.953577Z",
+     "iopub.status.idle": "2026-01-23T19:11:52.508391Z",
+     "shell.execute_reply": "2026-01-23T19:11:52.507610Z"
     }
    },
    "outputs": [],
@@ -163,10 +163,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-23T01:06:44.801288Z",
-     "iopub.status.busy": "2026-01-23T01:06:44.801125Z",
-     "iopub.status.idle": "2026-01-23T01:06:45.329465Z",
-     "shell.execute_reply": "2026-01-23T01:06:45.328897Z"
+     "iopub.execute_input": "2026-01-23T19:11:52.572744Z",
+     "iopub.status.busy": "2026-01-23T19:11:52.572583Z",
+     "iopub.status.idle": "2026-01-23T19:11:53.132048Z",
+     "shell.execute_reply": "2026-01-23T19:11:53.131346Z"
     }
    },
    "outputs": [],
@@ -197,10 +197,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-23T01:06:45.334317Z",
-     "iopub.status.busy": "2026-01-23T01:06:45.334193Z",
-     "iopub.status.idle": "2026-01-23T01:06:45.394851Z",
-     "shell.execute_reply": "2026-01-23T01:06:45.394277Z"
+     "iopub.execute_input": "2026-01-23T19:11:53.136451Z",
+     "iopub.status.busy": "2026-01-23T19:11:53.136323Z",
+     "iopub.status.idle": "2026-01-23T19:11:53.204396Z",
+     "shell.execute_reply": "2026-01-23T19:11:53.203180Z"
     }
    },
    "outputs": [],
@@ -226,10 +226,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-23T01:06:45.396077Z",
-     "iopub.status.busy": "2026-01-23T01:06:45.395980Z",
-     "iopub.status.idle": "2026-01-23T01:06:45.493092Z",
-     "shell.execute_reply": "2026-01-23T01:06:45.492034Z"
+     "iopub.execute_input": "2026-01-23T19:11:53.206035Z",
+     "iopub.status.busy": "2026-01-23T19:11:53.205922Z",
+     "iopub.status.idle": "2026-01-23T19:11:53.304940Z",
+     "shell.execute_reply": "2026-01-23T19:11:53.304135Z"
     }
    },
    "outputs": [],
@@ -255,10 +255,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-23T01:06:45.494493Z",
-     "iopub.status.busy": "2026-01-23T01:06:45.494379Z",
-     "iopub.status.idle": "2026-01-23T01:06:45.556808Z",
-     "shell.execute_reply": "2026-01-23T01:06:45.556113Z"
+     "iopub.execute_input": "2026-01-23T19:11:53.306735Z",
+     "iopub.status.busy": "2026-01-23T19:11:53.306609Z",
+     "iopub.status.idle": "2026-01-23T19:11:53.367979Z",
+     "shell.execute_reply": "2026-01-23T19:11:53.367247Z"
     }
    },
    "outputs": [],
@@ -284,10 +284,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-23T01:06:45.558420Z",
-     "iopub.status.busy": "2026-01-23T01:06:45.558322Z",
-     "iopub.status.idle": "2026-01-23T01:06:45.624019Z",
-     "shell.execute_reply": "2026-01-23T01:06:45.623233Z"
+     "iopub.execute_input": "2026-01-23T19:11:53.369488Z",
+     "iopub.status.busy": "2026-01-23T19:11:53.369383Z",
+     "iopub.status.idle": "2026-01-23T19:11:53.434458Z",
+     "shell.execute_reply": "2026-01-23T19:11:53.433721Z"
     }
    },
    "outputs": [],
@@ -309,10 +309,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-23T01:06:45.625504Z",
-     "iopub.status.busy": "2026-01-23T01:06:45.625372Z",
-     "iopub.status.idle": "2026-01-23T01:06:46.323237Z",
-     "shell.execute_reply": "2026-01-23T01:06:46.322580Z"
+     "iopub.execute_input": "2026-01-23T19:11:53.436036Z",
+     "iopub.status.busy": "2026-01-23T19:11:53.435927Z",
+     "iopub.status.idle": "2026-01-23T19:11:54.137397Z",
+     "shell.execute_reply": "2026-01-23T19:11:54.136577Z"
     }
    },
    "outputs": [],
@@ -339,10 +339,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-23T01:06:46.335769Z",
-     "iopub.status.busy": "2026-01-23T01:06:46.335617Z",
-     "iopub.status.idle": "2026-01-23T01:06:46.688457Z",
-     "shell.execute_reply": "2026-01-23T01:06:46.687856Z"
+     "iopub.execute_input": "2026-01-23T19:11:54.149675Z",
+     "iopub.status.busy": "2026-01-23T19:11:54.149518Z",
+     "iopub.status.idle": "2026-01-23T19:11:54.503906Z",
+     "shell.execute_reply": "2026-01-23T19:11:54.503288Z"
     }
    },
    "outputs": [],
@@ -371,10 +371,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-23T01:06:46.695206Z",
-     "iopub.status.busy": "2026-01-23T01:06:46.695079Z",
-     "iopub.status.idle": "2026-01-23T01:06:46.991932Z",
-     "shell.execute_reply": "2026-01-23T01:06:46.991186Z"
+     "iopub.execute_input": "2026-01-23T19:11:54.531693Z",
+     "iopub.status.busy": "2026-01-23T19:11:54.531538Z",
+     "iopub.status.idle": "2026-01-23T19:11:54.826744Z",
+     "shell.execute_reply": "2026-01-23T19:11:54.825489Z"
     }
    },
    "outputs": [],
@@ -398,10 +398,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-23T01:06:46.998233Z",
-     "iopub.status.busy": "2026-01-23T01:06:46.998115Z",
-     "iopub.status.idle": "2026-01-23T01:06:47.249053Z",
-     "shell.execute_reply": "2026-01-23T01:06:47.248477Z"
+     "iopub.execute_input": "2026-01-23T19:11:54.831357Z",
+     "iopub.status.busy": "2026-01-23T19:11:54.831255Z",
+     "iopub.status.idle": "2026-01-23T19:11:55.075656Z",
+     "shell.execute_reply": "2026-01-23T19:11:55.074872Z"
     }
    },
    "outputs": [],
@@ -426,10 +426,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-23T01:06:47.256305Z",
-     "iopub.status.busy": "2026-01-23T01:06:47.256163Z",
-     "iopub.status.idle": "2026-01-23T01:06:47.549938Z",
-     "shell.execute_reply": "2026-01-23T01:06:47.549180Z"
+     "iopub.execute_input": "2026-01-23T19:11:55.082037Z",
+     "iopub.status.busy": "2026-01-23T19:11:55.081930Z",
+     "iopub.status.idle": "2026-01-23T19:11:55.377706Z",
+     "shell.execute_reply": "2026-01-23T19:11:55.377031Z"
     }
    },
    "outputs": [],
@@ -454,10 +454,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-23T01:06:47.556302Z",
-     "iopub.status.busy": "2026-01-23T01:06:47.556165Z",
-     "iopub.status.idle": "2026-01-23T01:06:47.888887Z",
-     "shell.execute_reply": "2026-01-23T01:06:47.888339Z"
+     "iopub.execute_input": "2026-01-23T19:11:55.384112Z",
+     "iopub.status.busy": "2026-01-23T19:11:55.383951Z",
+     "iopub.status.idle": "2026-01-23T19:11:55.714194Z",
+     "shell.execute_reply": "2026-01-23T19:11:55.713522Z"
     }
    },
    "outputs": [],
@@ -482,10 +482,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-23T01:06:47.896759Z",
-     "iopub.status.busy": "2026-01-23T01:06:47.896615Z",
-     "iopub.status.idle": "2026-01-23T01:06:48.254390Z",
-     "shell.execute_reply": "2026-01-23T01:06:48.253703Z"
+     "iopub.execute_input": "2026-01-23T19:11:55.722074Z",
+     "iopub.status.busy": "2026-01-23T19:11:55.721937Z",
+     "iopub.status.idle": "2026-01-23T19:11:56.080731Z",
+     "shell.execute_reply": "2026-01-23T19:11:56.080033Z"
     }
    },
    "outputs": [],
@@ -512,10 +512,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-23T01:06:48.261810Z",
-     "iopub.status.busy": "2026-01-23T01:06:48.261684Z",
-     "iopub.status.idle": "2026-01-23T01:06:49.926044Z",
-     "shell.execute_reply": "2026-01-23T01:06:49.925497Z"
+     "iopub.execute_input": "2026-01-23T19:11:56.088050Z",
+     "iopub.status.busy": "2026-01-23T19:11:56.087930Z",
+     "iopub.status.idle": "2026-01-23T19:11:57.422597Z",
+     "shell.execute_reply": "2026-01-23T19:11:57.421882Z"
     }
    },
    "outputs": [],
@@ -547,10 +547,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-23T01:06:49.927403Z",
-     "iopub.status.busy": "2026-01-23T01:06:49.927289Z",
-     "iopub.status.idle": "2026-01-23T01:06:50.003289Z",
-     "shell.execute_reply": "2026-01-23T01:06:50.002540Z"
+     "iopub.execute_input": "2026-01-23T19:11:57.423834Z",
+     "iopub.status.busy": "2026-01-23T19:11:57.423697Z",
+     "iopub.status.idle": "2026-01-23T19:11:57.501317Z",
+     "shell.execute_reply": "2026-01-23T19:11:57.500427Z"
     }
    },
    "outputs": [],
@@ -572,10 +572,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-23T01:06:50.004478Z",
-     "iopub.status.busy": "2026-01-23T01:06:50.004373Z",
-     "iopub.status.idle": "2026-01-23T01:06:51.078367Z",
-     "shell.execute_reply": "2026-01-23T01:06:51.077871Z"
+     "iopub.execute_input": "2026-01-23T19:11:57.503069Z",
+     "iopub.status.busy": "2026-01-23T19:11:57.502955Z",
+     "iopub.status.idle": "2026-01-23T19:11:58.536516Z",
+     "shell.execute_reply": "2026-01-23T19:11:58.534977Z"
     }
    },
    "outputs": [],
@@ -612,10 +612,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-23T01:06:51.079829Z",
-     "iopub.status.busy": "2026-01-23T01:06:51.079704Z",
-     "iopub.status.idle": "2026-01-23T01:06:51.474419Z",
-     "shell.execute_reply": "2026-01-23T01:06:51.473745Z"
+     "iopub.execute_input": "2026-01-23T19:11:58.537769Z",
+     "iopub.status.busy": "2026-01-23T19:11:58.537661Z",
+     "iopub.status.idle": "2026-01-23T19:11:58.901916Z",
+     "shell.execute_reply": "2026-01-23T19:11:58.901086Z"
     }
    },
    "outputs": [],
@@ -665,9 +665,21 @@
     "    shade(tree_colorize, cmap=\"limegreen\", how=\"linear\"),\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
