--- a/examples/user_guide/7_Pathfinding.ipynb
+++ b/examples/user_guide/7_Pathfinding.ipynb
@@ -29,10 +29,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-23T01:06:56.017775Z",
-     "iopub.status.busy": "2026-01-23T01:06:56.017670Z",
-     "iopub.status.idle": "2026-01-23T01:06:56.921697Z",
-     "shell.execute_reply": "2026-01-23T01:06:56.920886Z"
+     "iopub.execute_input": "2026-01-23T19:12:07.776106Z",
+     "iopub.status.busy": "2026-01-23T19:12:07.776006Z",
+     "iopub.status.idle": "2026-01-23T19:12:08.727171Z",
+     "shell.execute_reply": "2026-01-23T19:12:08.726236Z"
     }
    },
    "outputs": [],
@@ -85,10 +85,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-23T01:06:56.923454Z",
-     "iopub.status.busy": "2026-01-23T01:06:56.923128Z",
-     "iopub.status.idle": "2026-01-23T01:06:58.976532Z",
-     "shell.execute_reply": "2026-01-23T01:06:58.975742Z"
+     "iopub.execute_input": "2026-01-23T19:12:08.728831Z",
+     "iopub.status.busy": "2026-01-23T19:12:08.728524Z",
+     "iopub.status.idle": "2026-01-23T19:12:10.774555Z",
+     "shell.execute_reply": "2026-01-23T19:12:10.774060Z"
     }
    },
    "outputs": [],
@@ -151,10 +151,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-23T01:06:58.993845Z",
-     "iopub.status.busy": "2026-01-23T01:06:58.993685Z",
-     "iopub.status.idle": "2026-01-23T01:06:59.937427Z",
-     "shell.execute_reply": "2026-01-23T01:06:59.936992Z"
+     "iopub.execute_input": "2026-01-23T19:12:10.794167Z",
+     "iopub.status.busy": "2026-01-23T19:12:10.794009Z",
+     "iopub.status.idle": "2026-01-23T19:12:11.746819Z",
+     "shell.execute_reply": "2026-01-23T19:12:11.746217Z"
     }
    },
    "outputs": [],
@@ -184,10 +184,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-23T01:06:59.938678Z",
-     "iopub.status.busy": "2026-01-23T01:06:59.938575Z",
-     "iopub.status.idle": "2026-01-23T01:07:00.158198Z",
-     "shell.execute_reply": "2026-01-23T01:07:00.157663Z"
+     "iopub.execute_input": "2026-01-23T19:12:11.748305Z",
+     "iopub.status.busy": "2026-01-23T19:12:11.748175Z",
+     "iopub.status.idle": "2026-01-23T19:12:11.978322Z",
+     "shell.execute_reply": "2026-01-23T19:12:11.977713Z"
     }
    },
    "outputs": [],
@@ -217,6 +217,11 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
