--- a/examples/viewshed_gpu.ipynb
+++ b/examples/viewshed_gpu.ipynb
@@ -25,7 +25,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:13:44.071988Z",
+     "iopub.status.busy": "2026-01-23T19:13:44.071895Z",
+     "iopub.status.idle": "2026-01-23T19:13:45.175172Z",
+     "shell.execute_reply": "2026-01-23T19:13:45.174625Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import pandas\n",
@@ -61,7 +68,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:13:45.176791Z",
+     "iopub.status.busy": "2026-01-23T19:13:45.176492Z",
+     "iopub.status.idle": "2026-01-23T19:13:45.190687Z",
+     "shell.execute_reply": "2026-01-23T19:13:45.190041Z"
+    }
+   },
    "outputs": [],
    "source": [
     "file_name = '../xrspatial-examples/data/colorado_merge_3arc_resamp.tif'\n",
@@ -89,7 +103,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:13:45.207553Z",
+     "iopub.status.busy": "2026-01-23T19:13:45.207417Z",
+     "iopub.status.idle": "2026-01-23T19:13:45.216932Z",
+     "shell.execute_reply": "2026-01-23T19:13:45.216292Z"
+    }
+   },
    "outputs": [],
    "source": [
     "top_peaks_dict = dict(\n",
@@ -129,7 +150,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:13:45.218048Z",
+     "iopub.status.busy": "2026-01-23T19:13:45.217939Z",
+     "iopub.status.idle": "2026-01-23T19:13:46.874157Z",
+     "shell.execute_reply": "2026-01-23T19:13:46.873240Z"
+    }
+   },
    "outputs": [],
    "source": [
     "illuminated = hillshade(raster, name='Hillshade')"
@@ -147,7 +175,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:13:46.875451Z",
+     "iopub.status.busy": "2026-01-23T19:13:46.875338Z",
+     "iopub.status.idle": "2026-01-23T19:13:53.619323Z",
+     "shell.execute_reply": "2026-01-23T19:13:53.618794Z"
+    }
+   },
    "outputs": [],
    "source": [
     "fig, (ax1, ax2) = plt.subplots(ncols=2, figsize=(16, 7))\n",
@@ -168,7 +203,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:13:53.627657Z",
+     "iopub.status.busy": "2026-01-23T19:13:53.627505Z",
+     "iopub.status.idle": "2026-01-23T19:14:01.365162Z",
+     "shell.execute_reply": "2026-01-23T19:14:01.364420Z"
+    }
+   },
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots(figsize=(12, 10))\n",
@@ -194,7 +236,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:14:01.367688Z",
+     "iopub.status.busy": "2026-01-23T19:14:01.367578Z",
+     "iopub.status.idle": "2026-01-23T19:14:01.632949Z",
+     "shell.execute_reply": "2026-01-23T19:14:01.632604Z"
+    }
+   },
    "outputs": [],
    "source": [
     "raster.data = cupy.asarray(raster.data)\n",
@@ -215,7 +264,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:14:01.634384Z",
+     "iopub.status.busy": "2026-01-23T19:14:01.634277Z",
+     "iopub.status.idle": "2026-01-23T19:14:04.550123Z",
+     "shell.execute_reply": "2026-01-23T19:14:04.549467Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# invisible points from a view point are marked as -1 in the output visibility grid\n",
@@ -249,7 +305,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:14:04.551527Z",
+     "iopub.status.busy": "2026-01-23T19:14:04.551419Z",
+     "iopub.status.idle": "2026-01-23T19:16:25.934305Z",
+     "shell.execute_reply": "2026-01-23T19:16:25.933233Z"
+    }
+   },
    "outputs": [],
    "source": [
     "nrows, ncols = 4, 5\n",
@@ -277,7 +340,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:16:25.940159Z",
+     "iopub.status.busy": "2026-01-23T19:16:25.939977Z",
+     "iopub.status.idle": "2026-01-23T19:16:26.162832Z",
+     "shell.execute_reply": "2026-01-23T19:16:26.162048Z"
+    }
+   },
    "outputs": [],
    "source": [
     "visibility_areas = np.array([len(cupy.where(v.data != INVISIBLE)[0]) for v in visibility_grids])\n",
@@ -300,7 +370,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:16:26.164387Z",
+     "iopub.status.busy": "2026-01-23T19:16:26.164227Z",
+     "iopub.status.idle": "2026-01-23T19:16:35.313020Z",
+     "shell.execute_reply": "2026-01-23T19:16:35.312434Z"
+    }
+   },
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots(figsize=(12, 10))\n",
@@ -312,6 +389,13 @@
     "plt.delaxes(fig.axes[-1])\n",
     "plt.delaxes(fig.axes[-1])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
