--- a/examples/Pathfinding_Austin_Road_Network.ipynb
+++ b/examples/Pathfinding_Austin_Road_Network.ipynb
@@ -24,7 +24,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:13:31.469085Z",
+     "iopub.status.busy": "2026-01-23T19:13:31.468977Z",
+     "iopub.status.idle": "2026-01-23T19:13:32.421379Z",
+     "shell.execute_reply": "2026-01-23T19:13:32.420650Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import datashader as ds\n",
@@ -62,12 +69,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:13:32.423409Z",
+     "iopub.status.busy": "2026-01-23T19:13:32.422938Z",
+     "iopub.status.idle": "2026-01-23T19:13:34.034515Z",
+     "shell.execute_reply": "2026-01-23T19:13:34.033712Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "streets = geopandas.read_file(\n",
-    "    \"data/geo_export_9c395dda-0b29-41ec-89b4-a51a898f7104.shp\"\n",
-    ")\n",
+    "streets = geopandas.read_file(\"../xrspatial-examples/data/geo_export_9c395dda-0b29-41ec-89b4-a51a898f7104.shp\")\n",
     "streets = streets.to_crs(\"EPSG:4326\")\n",
     "streets = streets.explode(\"geometry\").reset_index(drop=True)\n",
     "streets_spd = spatialpandas.GeoDataFrame(streets, geometry=\"geometry\")"
@@ -92,7 +104,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:13:34.036027Z",
+     "iopub.status.busy": "2026-01-23T19:13:34.035787Z",
+     "iopub.status.idle": "2026-01-23T19:13:34.054300Z",
+     "shell.execute_reply": "2026-01-23T19:13:34.053635Z"
+    }
+   },
    "outputs": [],
    "source": [
     "xmin, ymin, xmax, ymax = (\n",
@@ -109,7 +128,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:13:34.072052Z",
+     "iopub.status.busy": "2026-01-23T19:13:34.071884Z",
+     "iopub.status.idle": "2026-01-23T19:13:36.136717Z",
+     "shell.execute_reply": "2026-01-23T19:13:36.136054Z"
+    }
+   },
    "outputs": [],
    "source": [
     "H, W = 600, 800\n",
@@ -153,7 +179,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:13:36.137998Z",
+     "iopub.status.busy": "2026-01-23T19:13:36.137876Z",
+     "iopub.status.idle": "2026-01-23T19:13:37.131601Z",
+     "shell.execute_reply": "2026-01-23T19:13:37.131064Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# find the path from start to goal,\n",
@@ -166,11 +199,32 @@
     "path_shaded = dynspread(shade(path_agg, cmap=[\"green\"]), threshold=1, max_px=1)\n",
     "set_background(stack(street_shaded, path_shaded, start_shaded, goal_shaded), \"black\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.14.2"
   }
  },
  "nbformat": 4,
