--- a/examples/pharmacy-deserts.ipynb
+++ b/examples/pharmacy-deserts.ipynb
@@ -21,7 +21,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:12:53.231018Z",
+     "iopub.status.busy": "2026-01-23T19:12:53.230906Z",
+     "iopub.status.idle": "2026-01-23T19:12:54.153805Z",
+     "shell.execute_reply": "2026-01-23T19:12:54.153202Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import datashader as ds\n",
@@ -60,11 +67,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:12:54.155318Z",
+     "iopub.status.busy": "2026-01-23T19:12:54.155027Z",
+     "iopub.status.idle": "2026-01-23T19:12:54.308338Z",
+     "shell.execute_reply": "2026-01-23T19:12:54.307765Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Load Pharmacies and add out x, y fields based on CalcLocation\n",
-    "pharmacy_df = pd.read_csv(\"./xrspatial-examples/data/facilities.csv\")\n",
+    "pharmacy_df = pd.read_csv(\"../xrspatial-examples/data/facilities.csv\")\n",
     "coords = pharmacy_df[\"CalcLocation\"].str.split(\",\", expand=True)\n",
     "pharmacy_df[\"y\"] = np.array(coords[0], dtype=\"float64\")\n",
     "pharmacy_df[\"x\"] = np.array(coords[1], dtype=\"float64\")\n",
@@ -82,7 +96,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:12:54.325729Z",
+     "iopub.status.busy": "2026-01-23T19:12:54.325568Z",
+     "iopub.status.idle": "2026-01-23T19:13:07.768006Z",
+     "shell.execute_reply": "2026-01-23T19:13:07.767388Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Load Census Block Groups and Calculate Percent over 65 years-old\n",
@@ -105,7 +126,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:13:07.769550Z",
+     "iopub.status.busy": "2026-01-23T19:13:07.769287Z",
+     "iopub.status.idle": "2026-01-23T19:13:08.942658Z",
+     "shell.execute_reply": "2026-01-23T19:13:08.941968Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Load Census County and Calculate Percent over 65 years-old\n",
@@ -140,7 +168,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:13:08.944030Z",
+     "iopub.status.busy": "2026-01-23T19:13:08.943925Z",
+     "iopub.status.idle": "2026-01-23T19:13:12.446986Z",
+     "shell.execute_reply": "2026-01-23T19:13:12.446334Z"
+    }
+   },
    "outputs": [],
    "source": [
     "x_range = (-124.848974, -66.885444)\n",
@@ -176,7 +211,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:13:12.448188Z",
+     "iopub.status.busy": "2026-01-23T19:13:12.448083Z",
+     "iopub.status.idle": "2026-01-23T19:13:15.042708Z",
+     "shell.execute_reply": "2026-01-23T19:13:15.042222Z"
+    }
+   },
    "outputs": [],
    "source": [
     "pharmacy_raster = cvs.points(pharmacy_df, \"x\", \"y\")\n",
@@ -205,7 +247,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:13:15.044150Z",
+     "iopub.status.busy": "2026-01-23T19:13:15.044043Z",
+     "iopub.status.idle": "2026-01-23T19:13:23.087968Z",
+     "shell.execute_reply": "2026-01-23T19:13:23.087515Z"
+    }
+   },
    "outputs": [],
    "source": [
     "age_raster = cvs.polygons(\n",
@@ -232,7 +281,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:13:23.090108Z",
+     "iopub.status.busy": "2026-01-23T19:13:23.090002Z",
+     "iopub.status.idle": "2026-01-23T19:13:23.469051Z",
+     "shell.execute_reply": "2026-01-23T19:13:23.468423Z"
+    }
+   },
    "outputs": [],
    "source": [
     "pharmacy_deserts = binary(proximity_classifed, [3])\n",
@@ -267,7 +323,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:13:23.470503Z",
+     "iopub.status.busy": "2026-01-23T19:13:23.470395Z",
+     "iopub.status.idle": "2026-01-23T19:13:25.284662Z",
+     "shell.execute_reply": "2026-01-23T19:13:25.284119Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from datashader.colors import Set1\n",
@@ -294,7 +357,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:13:25.286041Z",
+     "iopub.status.busy": "2026-01-23T19:13:25.285949Z",
+     "iopub.status.idle": "2026-01-23T19:13:25.470420Z",
+     "shell.execute_reply": "2026-01-23T19:13:25.469864Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial import zonal_stats\n",
@@ -322,7 +392,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:13:25.471583Z",
+     "iopub.status.busy": "2026-01-23T19:13:25.471478Z",
+     "iopub.status.idle": "2026-01-23T19:13:25.593109Z",
+     "shell.execute_reply": "2026-01-23T19:13:25.592471Z"
+    }
+   },
    "outputs": [],
    "source": [
     "cols = [\"pharmacy_desert_mean\", \"NAME\", \"STATE_FIPS\", \"geometry\"]\n",
@@ -340,7 +417,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:13:25.594252Z",
+     "iopub.status.busy": "2026-01-23T19:13:25.594151Z",
+     "iopub.status.idle": "2026-01-23T19:13:28.338669Z",
+     "shell.execute_reply": "2026-01-23T19:13:28.337777Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial import hillshade\n",
@@ -359,7 +443,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:13:28.340196Z",
+     "iopub.status.busy": "2026-01-23T19:13:28.340077Z",
+     "iopub.status.idle": "2026-01-23T19:13:28.571855Z",
+     "shell.execute_reply": "2026-01-23T19:13:28.571307Z"
+    }
+   },
    "outputs": [],
    "source": [
     "img = stack(\n",
@@ -370,11 +461,32 @@
     ")\n",
     "set_background(img, \"black\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.14.2"
   }
  },
  "nbformat": 4,
