--- a/examples/user_guide/1_Surface.ipynb
+++ b/examples/user_guide/1_Surface.ipynb
@@ -46,10 +46,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-23T01:05:45.076389Z",
-     "iopub.status.busy": "2026-01-23T01:05:45.076296Z",
-     "iopub.status.idle": "2026-01-23T01:05:46.721799Z",
-     "shell.execute_reply": "2026-01-23T01:05:46.721260Z"
+     "iopub.execute_input": "2026-01-23T19:10:38.297161Z",
+     "iopub.status.busy": "2026-01-23T19:10:38.297071Z",
+     "iopub.status.idle": "2026-01-23T19:10:39.913968Z",
+     "shell.execute_reply": "2026-01-23T19:10:39.913067Z"
     }
    },
    "outputs": [],
@@ -83,10 +83,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-23T01:05:46.723464Z",
-     "iopub.status.busy": "2026-01-23T01:05:46.723116Z",
-     "iopub.status.idle": "2026-01-23T01:05:48.556884Z",
-     "shell.execute_reply": "2026-01-23T01:05:48.556368Z"
+     "iopub.execute_input": "2026-01-23T19:10:39.915617Z",
+     "iopub.status.busy": "2026-01-23T19:10:39.915336Z",
+     "iopub.status.idle": "2026-01-23T19:10:41.680731Z",
+     "shell.execute_reply": "2026-01-23T19:10:41.679983Z"
     }
    },
    "outputs": [],
@@ -114,10 +114,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-23T01:05:48.575684Z",
-     "iopub.status.busy": "2026-01-23T01:05:48.575535Z",
-     "iopub.status.idle": "2026-01-23T01:05:48.650480Z",
-     "shell.execute_reply": "2026-01-23T01:05:48.649590Z"
+     "iopub.execute_input": "2026-01-23T19:10:41.698559Z",
+     "iopub.status.busy": "2026-01-23T19:10:41.698410Z",
+     "iopub.status.idle": "2026-01-23T19:10:41.774554Z",
+     "shell.execute_reply": "2026-01-23T19:10:41.774067Z"
     }
    },
    "outputs": [],
@@ -141,10 +141,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-23T01:05:48.651901Z",
-     "iopub.status.busy": "2026-01-23T01:05:48.651797Z",
-     "iopub.status.idle": "2026-01-23T01:05:48.740838Z",
-     "shell.execute_reply": "2026-01-23T01:05:48.739814Z"
+     "iopub.execute_input": "2026-01-23T19:10:41.775743Z",
+     "iopub.status.busy": "2026-01-23T19:10:41.775628Z",
+     "iopub.status.idle": "2026-01-23T19:10:41.865624Z",
+     "shell.execute_reply": "2026-01-23T19:10:41.864594Z"
     }
    },
    "outputs": [],
@@ -171,10 +171,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-23T01:05:48.743794Z",
-     "iopub.status.busy": "2026-01-23T01:05:48.743688Z",
-     "iopub.status.idle": "2026-01-23T01:05:49.799432Z",
-     "shell.execute_reply": "2026-01-23T01:05:49.798753Z"
+     "iopub.execute_input": "2026-01-23T19:10:41.867801Z",
+     "iopub.status.busy": "2026-01-23T19:10:41.867692Z",
+     "iopub.status.idle": "2026-01-23T19:10:42.906206Z",
+     "shell.execute_reply": "2026-01-23T19:10:42.905425Z"
     }
    },
    "outputs": [],
@@ -201,10 +201,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-23T01:05:49.803468Z",
-     "iopub.status.busy": "2026-01-23T01:05:49.803343Z",
-     "iopub.status.idle": "2026-01-23T01:05:50.071899Z",
-     "shell.execute_reply": "2026-01-23T01:05:50.071154Z"
+     "iopub.execute_input": "2026-01-23T19:10:42.908590Z",
+     "iopub.status.busy": "2026-01-23T19:10:42.908484Z",
+     "iopub.status.idle": "2026-01-23T19:10:43.167750Z",
+     "shell.execute_reply": "2026-01-23T19:10:43.166775Z"
     }
    },
    "outputs": [],
@@ -241,10 +241,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-23T01:05:50.076050Z",
-     "iopub.status.busy": "2026-01-23T01:05:50.075898Z",
-     "iopub.status.idle": "2026-01-23T01:05:51.201913Z",
-     "shell.execute_reply": "2026-01-23T01:05:51.201329Z"
+     "iopub.execute_input": "2026-01-23T19:10:43.170555Z",
+     "iopub.status.busy": "2026-01-23T19:10:43.170437Z",
+     "iopub.status.idle": "2026-01-23T19:10:44.302977Z",
+     "shell.execute_reply": "2026-01-23T19:10:44.302073Z"
     }
    },
    "outputs": [],
@@ -283,10 +283,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-23T01:05:51.206172Z",
-     "iopub.status.busy": "2026-01-23T01:05:51.206076Z",
-     "iopub.status.idle": "2026-01-23T01:05:51.433035Z",
-     "shell.execute_reply": "2026-01-23T01:05:51.432339Z"
+     "iopub.execute_input": "2026-01-23T19:10:44.306651Z",
+     "iopub.status.busy": "2026-01-23T19:10:44.306537Z",
+     "iopub.status.idle": "2026-01-23T19:10:44.525415Z",
+     "shell.execute_reply": "2026-01-23T19:10:44.524460Z"
     }
    },
    "outputs": [],
@@ -330,10 +330,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-23T01:05:51.435698Z",
-     "iopub.status.busy": "2026-01-23T01:05:51.435594Z",
-     "iopub.status.idle": "2026-01-23T01:05:52.080003Z",
-     "shell.execute_reply": "2026-01-23T01:05:52.079158Z"
+     "iopub.execute_input": "2026-01-23T19:10:44.527949Z",
+     "iopub.status.busy": "2026-01-23T19:10:44.527841Z",
+     "iopub.status.idle": "2026-01-23T19:10:45.170243Z",
+     "shell.execute_reply": "2026-01-23T19:10:45.169701Z"
     }
    },
    "outputs": [],
@@ -380,10 +380,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-23T01:05:52.081235Z",
-     "iopub.status.busy": "2026-01-23T01:05:52.081121Z",
-     "iopub.status.idle": "2026-01-23T01:05:58.440849Z",
-     "shell.execute_reply": "2026-01-23T01:05:58.440147Z"
+     "iopub.execute_input": "2026-01-23T19:10:45.171678Z",
+     "iopub.status.busy": "2026-01-23T19:10:45.171571Z",
+     "iopub.status.idle": "2026-01-23T19:10:50.580930Z",
+     "shell.execute_reply": "2026-01-23T19:10:50.580320Z"
     }
    },
    "outputs": [],
@@ -419,10 +419,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-23T01:05:58.442088Z",
-     "iopub.status.busy": "2026-01-23T01:05:58.441989Z",
-     "iopub.status.idle": "2026-01-23T01:05:59.426418Z",
-     "shell.execute_reply": "2026-01-23T01:05:59.425836Z"
+     "iopub.execute_input": "2026-01-23T19:10:50.582021Z",
+     "iopub.status.busy": "2026-01-23T19:10:50.581916Z",
+     "iopub.status.idle": "2026-01-23T19:10:51.555064Z",
+     "shell.execute_reply": "2026-01-23T19:10:51.554444Z"
     }
    },
    "outputs": [],
@@ -464,10 +464,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-23T01:05:59.430189Z",
-     "iopub.status.busy": "2026-01-23T01:05:59.430076Z",
-     "iopub.status.idle": "2026-01-23T01:05:59.992006Z",
-     "shell.execute_reply": "2026-01-23T01:05:59.991256Z"
+     "iopub.execute_input": "2026-01-23T19:10:51.559087Z",
+     "iopub.status.busy": "2026-01-23T19:10:51.558973Z",
+     "iopub.status.idle": "2026-01-23T19:10:52.140227Z",
+     "shell.execute_reply": "2026-01-23T19:10:52.139511Z"
     }
    },
    "outputs": [],
@@ -504,6 +504,11 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
