--- a/examples/user_guide/8_Local_Tools.ipynb
+++ b/examples/user_guide/8_Local_Tools.ipynb
@@ -60,10 +60,10 @@
    "id": "c7945275",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-23T01:07:02.795736Z",
-     "iopub.status.busy": "2026-01-23T01:07:02.795627Z",
-     "iopub.status.idle": "2026-01-23T01:07:03.061940Z",
-     "shell.execute_reply": "2026-01-23T01:07:03.061054Z"
+     "iopub.execute_input": "2026-01-23T19:12:14.575044Z",
+     "iopub.status.busy": "2026-01-23T19:12:14.574948Z",
+     "iopub.status.idle": "2026-01-23T19:12:14.815067Z",
+     "shell.execute_reply": "2026-01-23T19:12:14.814140Z"
     }
    },
    "outputs": [],
@@ -110,10 +110,10 @@
    "id": "9ce0bf94",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-23T01:07:03.063570Z",
-     "iopub.status.busy": "2026-01-23T01:07:03.063370Z",
-     "iopub.status.idle": "2026-01-23T01:07:03.255365Z",
-     "shell.execute_reply": "2026-01-23T01:07:03.254848Z"
+     "iopub.execute_input": "2026-01-23T19:12:14.816494Z",
+     "iopub.status.busy": "2026-01-23T19:12:14.816277Z",
+     "iopub.status.idle": "2026-01-23T19:12:15.013726Z",
+     "shell.execute_reply": "2026-01-23T19:12:15.013026Z"
     }
    },
    "outputs": [],
@@ -166,10 +166,10 @@
    "id": "86353494",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-23T01:07:03.257562Z",
-     "iopub.status.busy": "2026-01-23T01:07:03.257319Z",
-     "iopub.status.idle": "2026-01-23T01:07:04.082077Z",
-     "shell.execute_reply": "2026-01-23T01:07:04.081473Z"
+     "iopub.execute_input": "2026-01-23T19:12:15.015205Z",
+     "iopub.status.busy": "2026-01-23T19:12:15.014961Z",
+     "iopub.status.idle": "2026-01-23T19:12:15.849282Z",
+     "shell.execute_reply": "2026-01-23T19:12:15.848722Z"
     }
    },
    "outputs": [],
@@ -216,10 +216,10 @@
    "id": "7f1b3bfa",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-23T01:07:04.083582Z",
-     "iopub.status.busy": "2026-01-23T01:07:04.083286Z",
-     "iopub.status.idle": "2026-01-23T01:07:04.144417Z",
-     "shell.execute_reply": "2026-01-23T01:07:04.143610Z"
+     "iopub.execute_input": "2026-01-23T19:12:15.850772Z",
+     "iopub.status.busy": "2026-01-23T19:12:15.850463Z",
+     "iopub.status.idle": "2026-01-23T19:12:15.911546Z",
+     "shell.execute_reply": "2026-01-23T19:12:15.910879Z"
     }
    },
    "outputs": [],
@@ -260,10 +260,10 @@
    "id": "b95f96c7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-23T01:07:04.146229Z",
-     "iopub.status.busy": "2026-01-23T01:07:04.146110Z",
-     "iopub.status.idle": "2026-01-23T01:07:04.255175Z",
-     "shell.execute_reply": "2026-01-23T01:07:04.254618Z"
+     "iopub.execute_input": "2026-01-23T19:12:15.913296Z",
+     "iopub.status.busy": "2026-01-23T19:12:15.913193Z",
+     "iopub.status.idle": "2026-01-23T19:12:16.021873Z",
+     "shell.execute_reply": "2026-01-23T19:12:16.021124Z"
     }
    },
    "outputs": [],
@@ -306,10 +306,10 @@
    "id": "78a7824e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-23T01:07:04.256881Z",
-     "iopub.status.busy": "2026-01-23T01:07:04.256769Z",
-     "iopub.status.idle": "2026-01-23T01:07:04.334077Z",
-     "shell.execute_reply": "2026-01-23T01:07:04.333525Z"
+     "iopub.execute_input": "2026-01-23T19:12:16.023201Z",
+     "iopub.status.busy": "2026-01-23T19:12:16.023092Z",
+     "iopub.status.idle": "2026-01-23T19:12:16.098012Z",
+     "shell.execute_reply": "2026-01-23T19:12:16.097225Z"
     }
    },
    "outputs": [],
@@ -352,10 +352,10 @@
    "id": "1c6ab615",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-23T01:07:04.335260Z",
-     "iopub.status.busy": "2026-01-23T01:07:04.335151Z",
-     "iopub.status.idle": "2026-01-23T01:07:04.413589Z",
-     "shell.execute_reply": "2026-01-23T01:07:04.412969Z"
+     "iopub.execute_input": "2026-01-23T19:12:16.099198Z",
+     "iopub.status.busy": "2026-01-23T19:12:16.099091Z",
+     "iopub.status.idle": "2026-01-23T19:12:16.177146Z",
+     "shell.execute_reply": "2026-01-23T19:12:16.176353Z"
     }
    },
    "outputs": [],
@@ -398,10 +398,10 @@
    "id": "b5b7b743",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-23T01:07:04.414863Z",
-     "iopub.status.busy": "2026-01-23T01:07:04.414755Z",
-     "iopub.status.idle": "2026-01-23T01:07:04.483519Z",
-     "shell.execute_reply": "2026-01-23T01:07:04.482976Z"
+     "iopub.execute_input": "2026-01-23T19:12:16.178377Z",
+     "iopub.status.busy": "2026-01-23T19:12:16.178264Z",
+     "iopub.status.idle": "2026-01-23T19:12:16.246045Z",
+     "shell.execute_reply": "2026-01-23T19:12:16.245623Z"
     }
    },
    "outputs": [],
@@ -443,10 +443,10 @@
    "id": "cf614920",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-23T01:07:04.484819Z",
-     "iopub.status.busy": "2026-01-23T01:07:04.484717Z",
-     "iopub.status.idle": "2026-01-23T01:07:04.558165Z",
-     "shell.execute_reply": "2026-01-23T01:07:04.557625Z"
+     "iopub.execute_input": "2026-01-23T19:12:16.247819Z",
+     "iopub.status.busy": "2026-01-23T19:12:16.247718Z",
+     "iopub.status.idle": "2026-01-23T19:12:16.319960Z",
+     "shell.execute_reply": "2026-01-23T19:12:16.319301Z"
     }
    },
    "outputs": [],
@@ -488,10 +488,10 @@
    "id": "92d44cd2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-23T01:07:04.559395Z",
-     "iopub.status.busy": "2026-01-23T01:07:04.559264Z",
-     "iopub.status.idle": "2026-01-23T01:07:04.640352Z",
-     "shell.execute_reply": "2026-01-23T01:07:04.639382Z"
+     "iopub.execute_input": "2026-01-23T19:12:16.321180Z",
+     "iopub.status.busy": "2026-01-23T19:12:16.321075Z",
+     "iopub.status.idle": "2026-01-23T19:12:16.399030Z",
+     "shell.execute_reply": "2026-01-23T19:12:16.398285Z"
     }
    },
    "outputs": [],
@@ -535,10 +535,10 @@
    "id": "9d10ab75",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-23T01:07:04.641935Z",
-     "iopub.status.busy": "2026-01-23T01:07:04.641616Z",
-     "iopub.status.idle": "2026-01-23T01:07:04.722488Z",
-     "shell.execute_reply": "2026-01-23T01:07:04.721856Z"
+     "iopub.execute_input": "2026-01-23T19:12:16.400459Z",
+     "iopub.status.busy": "2026-01-23T19:12:16.400359Z",
+     "iopub.status.idle": "2026-01-23T19:12:16.479230Z",
+     "shell.execute_reply": "2026-01-23T19:12:16.478651Z"
     }
    },
    "outputs": [],
@@ -561,6 +561,11 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
